<resources>
    <string name="app_name">School Utility</string>
    <string name="tvAppName">School Utility</string>
    <string name="tvOptions">Select options from below: </string>
    <string name="bMidDayMeal">Mid Day Meal</string>
    <string name="studentsViewButton">Students View</string>
    <string name="tvMidDayMeal">Enter details below: </string>
    <string name="tvCode">Code: </string>
    <string name="tvCode_KARMDM">KARMDM</string>
    <string name="tvDate">Date: </string>
    <string name="tvStaffCount">Staff Count: </string>
    <string name="tvStudentsCount">Students Strength: </string>
    <string name="tvStudentsCountTitle">Enter Students Strength below:</string>
    <string name="tvClass1">Class 1: </string>
    <string name="tvClass2">Class 2: </string>
    <string name="tvClass3">Class 3: </string>
    <string name="tvClass4">Class 4: </string>
    <string name="tvClass5">Class 5: </string>
    <string name="tvClass6">Class 6: </string>
    <string name="tvClass7">Class 7: </string>
    <string name="tvClass8">Class 8: </string>
    <string name="tvClass9">Class 9: </string>
    <string name="tvClass10">Class 10: </string>
    <string name="tvReceiverNumber">To: </string>
    <string name="bSend">Send</string>
    <string name="bPreview">Preview Message</string>
    <string name="bEnter">Enter</string>
    <string name="bDone">Done</string>
    <string name="etClassStrengthHintValue">0</string>
    <string name="studentName">StudentName</string>
    <string name="studentId">StudentId</string>
    <string name="gender">Gender</string>
    <string name="todo">TODO</string>
    <string name="classNumber">ClassNumber</string>
    <string name="classTeacher">ClassTeacher</string>
    <string name="classesViewButton">Classes View</string>
    <string name="studentProfileViewName">Student Name</string>
    <string name="studentProfileViewClassAndSection">Class And section</string>
    <string name="studentProfileViewId">StudentId</string>
    <string name="studentProfileViewPresentOrAbsent">Present/Absent</string>
    <string name="studentProfileViewDateOfJoining">Date Of Joining: </string>
    <string name="studentProfileViewDateFormat">Date/Month/Year</string>
    <string name="studentProfileViewMarksScored">Marks Scored: </string>
    <string name="studentProfileViewFatherName">Father\'s Name:</string>
    <string name="studentProfileViewMotherName">Mother\'s Name: </string>
    <string name="studentProfileViewDOB_">Birth Date: </string>
    <string name="studentProfileViewAge">Age: </string>
    <string name="studentProfileViewPhoneNumber">Phone Number</string>
    <string name="studentProfileViewEMailId">EMail Id</string>
    <string name="studentProfileViewAddressLine1">Address Line1</string>
    <string name="title_activity_student_profile_view">StudentProfileView</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
