<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/tvAppName"
            android:textColor="@android:color/black"
            android:textSize="30sp"/>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tvOptions"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/bMidDayMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bMidDayMeal"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/studentsViewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="5dp"
            android:text="@string/studentsViewButton"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/classesViewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="5dp"
            android:text="@string/classesViewButton"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>