<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="200dp"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    cardview:cardCornerRadius="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">

        <ImageView
            android:id="@+id/cardViewPortraitStudentPic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@drawable/student_icon"
            android:contentDescription="@string/todo">
        </ImageView>

        <TextView
            android:id="@+id/cardViewPortraitStudentId"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/studentId"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/colorBlueGrayDark">
        </TextView>

        <TextView
            android:id="@+id/cardViewPortraitSecondField"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/gender"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/colorBlueGrayDark">
        </TextView>

    </LinearLayout>

</android.support.v7.widget.CardView>