<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStudentsCountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:gravity="start"
            android:text="@string/tvStudentsCountTitle"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass1"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass1"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass2"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass2"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass3"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass3"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass4"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass4"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass5"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass5"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass6"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass6"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass7"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass7"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass8"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass8"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass9"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass9"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/tvClass10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvClass10"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etClass10"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="@string/etClassStrengthHintValue"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <Button
            android:id="@+id/bDone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/bDone"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>
</ScrollView>