<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/tvMidDayMeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tvMidDayMeal"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:text="@string/tvCode"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/etCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="4dp"
                    android:inputType="text"
                    android:text="@string/tvCode_KARMDM"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:text="@string/tvDate"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="4dp"
                    android:inputType="date"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStaffCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:text="@string/tvStaffCount"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/etStaffCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="4dp"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStudentCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_margin="4dp"
                    android:layout_weight="3"
                    android:text="@string/tvStudentsCount"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/bEnter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bEnter"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvStudentStrenthEntered"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/bPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/bPreview"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_margin="4dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvReceiverNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/tvReceiverNumber"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:inputType="phone"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/bSend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:text="@string/bSend"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>