<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    cardview:cardCornerRadius="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8">

        <ImageView
            android:id="@+id/cardViewLandscapeStudentPic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:background="@drawable/student_icon"
            android:contentDescription="@string/todo">
        </ImageView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:id="@+id/cardViewLandscapeStudentName"
                android:layout_margin="1dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/studentName"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor="@color/colorBlack">
            </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="1dp">

                <TextView
                    android:id="@+id/cardViewLandscapeGender"
                    android:layout_marginEnd="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack">
                </TextView>

                <TextView
                    android:id="@+id/cardViewLandscapeStudentId"
                    android:layout_marginStart="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/studentId"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack">
                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/cardViewLandscapeLastField"
                android:layout_margin="1dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor="@color/colorBlack">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>